--- a/css/styles.css
+++ b/css/styles.css
@@ -22,3 +22,15 @@ img {
 .text-violet {
     color: #4d5ae5;
 }
+.menu-link {
+    font-family: "Roboto", sans-serif;
+        font-weight: 500;
+        font-size: 16px;
+        line-height: 1.5;
+        letter-spacing: 0.02em;
+        color: #2e2f42;
+}
+.menu-link:hover,
+.menu-link:focus {
+    color: #404bbf;
+}
