--- a/css/styles.css
+++ b/css/styles.css
@@ -10,6 +10,10 @@ button {
 img {
     display: block;
 }
+body {
+font-family: "Roboto", sans-serif;
+}
+
 .logo {
     font-family: "Raleway", sans-serif;
         font-weight: 700;
@@ -23,7 +27,6 @@ img {
     color: #4d5ae5;
 }
 .menu-link {
-    font-family: "Roboto", sans-serif;
         font-weight: 500;
         font-size: 16px;
         line-height: 1.5;
