added styles for h1 and button

--- a/css/styles.css
+++ b/css/styles.css
@@ -50,3 +50,26 @@ body {
 .contacts-link:focus {
   color: #404bbf;
 }
+.first-section {
+  background: #2e2f42;
+}
+.page-title {
+  font-size: 56px;
+  line-height: 1.07;
+  letter-spacing: 0.02em;
+  text-align: center;
+  color: #fff;
+}
+.btn {
+  background: #4d5ae5;
+  color: #fff;
+  font-family: inherit;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+}
+.btn:hover,
+.btn:focus {
+  background: #404bbf;
+}
