--- a/css/styles.css
+++ b/css/styles.css
@@ -24,10 +24,10 @@ body {
   line-height: 1.17;
   letter-spacing: 0.03em;
   text-transform: uppercase;
-  color: #2e2f42;
-}
-.text-violet {
   color: #4d5ae5;
+}
+.text-new-color {
+  color: #2e2f42;
 }
 .menu-link {
   font-weight: 500;
@@ -39,6 +39,9 @@ body {
 .menu-link:hover,
 .menu-link:focus {
   color: #404bbf;
+}
+.contacts {
+  font-style: normal;
 }
 .contacts-link {
   font-size: 16px;
@@ -116,8 +119,11 @@ body {
   font-family: 'Raleway', sans-serif;
   font-weight: 700;
   font-size: 18px;
-  line-height: 1.16667;
+  line-height: 1.17;
   letter-spacing: 0.03em;
   text-transform: uppercase;
+  color: #4d5ae5;
+}
+.text-white-color {
   color: #f4f4fd;
 }
